--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                    <div class="gallery">
                         <img src="./img/mic2.jpg" alt="">
                         <img src="./img/mic3.jpg" alt="">
-                        <video autoplay loop class="vid">
+                        <video controls class="vid">
                             <source src="./img/vid1.mp4" type="video/mp4">
                         </video>
-                        <video autoplay loop class="vid">
+                        <video controls class="vid">
                             <source src="./img/vid2.mp4" type="video/mp4">
                         </video>
-                        <video autoplay loop class="vid">
+                        <video controls class="vid">
                             <source src="./img/vid3.mp4" type="video/mp4">
                         </video>
                    </div>
