--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                    <div class="gallery">
                         <img src="./img/mic2.jpg" alt="">
                         <img src="./img/mic3.jpg" alt="">
+                        <img src="./img/mic4.jpg" alt="">
                         <video controls class="vid">
                             <source src="./img/vid1.mp4" type="video/mp4">
                         </video>
