--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 
                     <div class="message">
                         <h4>Call her</h4>
+                        <h1>MICHELLE</h1>
+                        <p>She'd say; Yes sweaty...</p>
+                    </div>
+
+                    <div class="message">
+                        <h4>Call her</h4>
                         <h1>ADOELA</h1>
                         <p>She'd say; Yes honey...</p>
                     </div>
@@ -60,11 +66,7 @@
                         <p>That's her father's name</p>
                     </div>
 
-                    <div class="message">
-                        <h4>as for</h4>
-                        <h1>MICHELLE</h1>
-                        <p>???????????</p>
-                    </div>
+                    
                 </div>
             </div>
         </section>
